--- a/public/kanbas/Assignments/edit.html
+++ b/public/kanbas/Assignments/edit.html
@@ -15,9 +15,9 @@
             <!---Kanbas Navigation-->
             <td>
                 <ul>
-                    <li><a href="#">Account</a></li>
+                    <li><a href="../accountNav.html">Account</a></li>
                     <li><a href="#">Dashboard</a></li>
-                    <li><a href="#">Courses</a></li>
+                    <li><a href="../courseNav.html">Courses</a></li>
                     <li><a href="#">Calendar</a></li>
                     <li><a href="#">Inbox</a></li>
                     <li><a href="#">History</a></li>
@@ -29,13 +29,13 @@
             <!---Course Navigation-->
             <td>
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="../home.html">Home</a></li>
                     <li><a href="#">Modules</a></li>
                     <li><a href="#">Piazza</a></li>
                     <li><a href="#">Zoom Meetings</a></li>
                     <li><a href="index.html">Assignments</a></li>
                     <li><a href="#">Quizzes</a></li>
-                    <li><a href="#">Grades</a></li>
+                    <li><a href="../grades.html">Grades</a></li>
                     <li><a href="#">People</a></li>
                     <li><a href="#">Panopto Video</a></li>
                     <li><a href="#">Discussions</a></li>
@@ -49,8 +49,12 @@
                     <li><a href="#">Settings</a></li>
                 </ul>
             </td>
-            <!---Editor-->
+            <!---Assignments Editor-->
             <td>
+                <select>
+                    <option selected>SpeedGrader</option>
+                </select>
+                <hr>
                 <h3>Assignment Name</h3>
                 <input value="A1-ENV + HTML">
                 <p><textarea>This is the assignment description.</textarea></p>
@@ -134,6 +138,10 @@
                     <div>Until</div>
                     <input type="date" value="2021-01-01"/>
                 </p>
+                <form action="index.html">
+                    <button>Cancel</button>
+                    <button>Save</button>
+                </form>
 
                 
 
