--- a/public/kanbas/Assignments/index.html
+++ b/public/kanbas/Assignments/index.html
@@ -15,7 +15,7 @@
             <!---Kanbas Navigation-->
             <td>
                 <ul>
-                    <li><a href="#">Account</a></li>
+                    <li><a href="../accountNav.html">Account</a></li>
                     <li><a href="#">Dashboard</a></li>
                     <li><a href="../courseNav.html">Courses</a></li>
                     <li><a href="#">Calendar</a></li>
@@ -29,13 +29,13 @@
             <!---Course Navigation-->
             <td>
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="../home.html">Home</a></li>
                     <li><a href="#">Modules</a></li>
                     <li><a href="#">Piazza</a></li>
                     <li><a href="#">Zoom Meetings</a></li>
-                    <li><a href="Assignments/index.html">Assignments</a></li>
+                    <li><a href="index.html">Assignments</a></li>
                     <li><a href="#">Quizzes</a></li>
-                    <li><a href="#">Grades</a></li>
+                    <li><a href="../grades.html">Grades</a></li>
                     <li><a href="#">People</a></li>
                     <li><a href="#">Panopto Video</a></li>
                     <li><a href="#">Discussions</a></li>
@@ -49,7 +49,7 @@
                     <li><a href="#">Settings</a></li>
                 </ul>
             </td>
-            <!---Gradables-->
+            <!---Assignments-->
             <td>
                 <input type="search" placeholder="Search for Assignments"/>
                 <button>Group</button>
