Filling in links to working pages

--- a/public/kanbas/grades.html
+++ b/public/kanbas/grades.html
@@ -15,7 +15,7 @@
             <!---Kanbas Navigation-->
             <td>
                 <ul>
-                    <li><a href="#">Account</a></li>
+                    <li><a href="accountNav.html">Account</a></li>
                     <li><a href="#">Dashboard</a></li>
                     <li><a href="courseNav.html">Courses</a></li>
                     <li><a href="#">Calendar</a></li>
@@ -35,7 +35,7 @@
                     <li><a href="#">Zoom Meetings</a></li>
                     <li><a href="Assignments/index.html">Assignments</a></li>
                     <li><a href="#">Quizzes</a></li>
-                    <li><a href="#">Grades</a></li>
+                    <li><a href="grades.html">Grades</a></li>
                     <li><a href="#">People</a></li>
                     <li><a href="#">Panopto Video</a></li>
                     <li><a href="#">Discussions</a></li>
