--- a/public/kanbas/home.html
+++ b/public/kanbas/home.html
@@ -14,9 +14,9 @@
             <!---Kanbas Navigation-->
             <td>
                 <ul>
-                    <li><a href="#">Account</a></li>
+                    <li><a href="accountNav.html">Account</a></li>
                     <li><a href="#">Dashboard</a></li>
-                    <li><a href="#">Courses</a></li>
+                    <li><a href="courseNav.html">Courses</a></li>
                     <li><a href="#">Calendar</a></li>
                     <li><a href="#">Inbox</a></li>
                     <li><a href="#">History</a></li>
@@ -28,7 +28,7 @@
             <!---Course Navigation-->
             <td>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li><a href="#">Modules</a></li>
                     <li><a href="#">Piazza</a></li>
                     <li><a href="#">Zoom Meetings</a></li>
