--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <a href="labs/a1/index.html">A1 Labs</a>
-    <div><a href="kanbas/courseNav.html">Kanbas</a></div>
+    <div><a href="kanbas/kanbasNav.html">Kanbas</a></div>
     
     <!--
       This HTML file is a template.
