--- a/public/kanbas/courseNav.html
+++ b/public/kanbas/courseNav.html
@@ -15,9 +15,9 @@
             <!---Kanbas Navigation-->
             <td>
                 <ul>
-                    <li><a href="#">Account</a></li>
+                    <li><a href="accountNav.html">Account</a></li>
                     <li><a href="#">Dashboard</a></li>
-                    <li><a href="#">Courses</a></li>
+                    <li><a href="courseNav.html">Courses</a></li>
                     <li><a href="#">Calendar</a></li>
                     <li><a href="#">Inbox</a></li>
                     <li><a href="#">History</a></li>
@@ -33,9 +33,9 @@
                     <li><a href="#">Modules</a></li>
                     <li><a href="#">Piazza</a></li>
                     <li><a href="#">Zoom Meetings</a></li>
-                    <li><a href="Assignments/index.html">Assignments</a></li>
+                    <li><a href="assignments/index.html">Assignments</a></li>
                     <li><a href="#">Quizzes</a></li>
-                    <li><a href="#">Grades</a></li>
+                    <li><a href="grades.html">Grades</a></li>
                     <li><a href="#">People</a></li>
                     <li><a href="#">Panopto Video</a></li>
                     <li><a href="#">Discussions</a></li>
