Adding missing elements

--- a/public/kanbas/Assignments/edit.html
+++ b/public/kanbas/Assignments/edit.html
@@ -116,7 +116,13 @@
                 <p>
                     <div>Group Assignment</div>
                     <input type="checkbox" id="chk-group-assign" name="check-group-assign"/>
-                    <label for="chk-group-assign">Group Assignment</label>
+                    <label for="chk-group-assign">This is a group assignment</label>
+                </p>
+
+                <p>
+                    <div>Peer Reviews</div>
+                    <input type="checkbox" id="chk-peer-review" name="check-peer-review"/>
+                    <label for="chk-peer-review">Require Peer Reviews</label>
                 </p>
 
                 <p>
