--- a/public/kanbas/grades.html
+++ b/public/kanbas/grades.html
@@ -63,6 +63,7 @@
                 <input type="search" placeholder="Search Students"/>
                 <h3>Assignment Names</h3>
                 <input type="search" placeholder="Search Assignments"/>
+                <p><button>Apply Filters</button></p>
                 <table border="1" width="100%">
                     <thead>
                         <tr>
