--- a/public/kanbas/home.html
+++ b/public/kanbas/home.html
@@ -100,6 +100,8 @@
             <!---Additional Information-->
             <td>
                 <h2>Course Status</h2>
+                <button>Unpublish</button>
+                <button>Published</button>
                 <ul>
                     <li><a href="#">Import Existing Content</li>
                     <li><a href="#">Import From Commons</a></li>
