--- a/public/kanbas/accountNav.html
+++ b/public/kanbas/accountNav.html
@@ -6,42 +6,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet" />
+    <link href="index.css" rel="stylesheet"/>
 </head>
 <body>
-    <table width="100%">
-        <thead>
-        </thead>
-        <tbody valign = "top">
-            <!---Kanbas Navigation-->
-            <td>
-                <ul>
-                    <li><a href="accountNav.html">Account</a></li>
-                    <li><a href="#">Dashboard</a></li>
-                    <li><a href="courseNav.html">Courses</a></li>
-                    <li><a href="#">Calendar</a></li>
-                    <li><a href="#">Inbox</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Studio</a></li>
-                    <li><a href="#">Commons</a></li>
-                    <li><a href="#">Help</a></li>
-                </ul>
-            </td>
-            <!---account Navigation-->
-            <td>
-                <ul>
-                    <li><a href="#">Notification</a></li>
-                    <li><a href="profile/index.html">Profile</a></li>
-                    <li><a href="#">Files</a></li>
-                    <li><a href="#">Settings</a></li>
-                    <li><a href="#">ePortfolios</a></li>
-                    <li><a href="#">Shared Content</a></li>
-                    <li><a href="#">The Hub</a></li>
-                    <li><a href="#">Qwickly Course Tools</a></li>
-                    <li><a href="#">Global Announcements</a></li>
-                </ul>
-            </td>
-        </tbody>
-    </table>
+    <div class="flex-row-container">
+        <!---Kanbas Navigation-->
+        <div class="kanbas-nav nav flex-column nav-pills" aria-orientation="vertical">
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <img style="width: 75px; padding: 0px;" src="neu-banner.png" alt="Image"></a>
+            <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="accountNav.html" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-regular fa-user fa-2x"></i>
+                <div>Account</div></a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="dashboard.html" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-gauge fa-2x"></i>
+                <div>Dashboard</div></a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="courseNav.html" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class=" fa fa-book fa-2x"></i>
+                <div>Courses</div></a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-regular fa-calendar-days fa-2x"></i>Calendar</a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-envelope-open-text fa-2x"></i>
+                <div>Inbox</div></a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-regular fa-clock fa-2x"></i>
+                <div>History</div></a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-solid fa-display fa-2x"></i>
+                <div>Studio</div></a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-regular fa-circle-right fa-2x"></i>
+                <div>Studio</div></a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-regular fa-circle-question fa-2x"></i>
+                <div>Help</div></a>
+        </div>
+        <!---account Navigation-->
+        <div class="main-screen">
+            <h3>Jose Annunziato's Profile</h3>
+            <hr>
+            <div class="account-nav list-group">
+                <a href="#" class="list-group-item list-group-item-action">Notification</a>
+                <a href="profile/index.html" class="list-group-item list-group-item-action">Profile</a>
+                <a href="#" class="list-group-item list-group-item-action">Files</a>
+                <a href="#" class="list-group-item list-group-item-action">Settings</a>
+                <a href="#" class="list-group-item list-group-item-action">ePortfolios</a>
+                <a href="#" class="list-group-item list-group-item-action">Shared Content</a>
+                <a href="#" class="list-group-item list-group-item-action">The Hub</a>
+                <a href="#" class="list-group-item list-group-item-action">Qwickly Course Tools</a>
+                <a href="#" class="list-group-item list-group-item-action">Global Announcements</a>
+            </div>
+        </div>
+    </div>
+            
+
     
 </body>
 </html>
