--- a/public/kanbas/courseNav.html
+++ b/public/kanbas/courseNav.html
@@ -6,51 +6,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet" />
+    <link href="index.css" rel="stylesheet"/>
 </head>
 <body>
-    <table width="100%">
-        <thead>
-        </thead>
-        <tbody valign = "top">
-            <!---Kanbas Navigation-->
-            <td>
-                <ul>
-                    <li><a href="accountNav.html">Account</a></li>
-                    <li><a href="#">Dashboard</a></li>
-                    <li><a href="courseNav.html">Courses</a></li>
-                    <li><a href="#">Calendar</a></li>
-                    <li><a href="#">Inbox</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Studio</a></li>
-                    <li><a href="#">Commons</a></li>
-                    <li><a href="#">Help</a></li>
-                </ul>
-            </td>
-            <!---Course Navigation-->
-            <td>
-                <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="#">Modules</a></li>
-                    <li><a href="#">Piazza</a></li>
-                    <li><a href="#">Zoom Meetings</a></li>
-                    <li><a href="assignments/index.html">Assignments</a></li>
-                    <li><a href="#">Quizzes</a></li>
-                    <li><a href="grades.html">Grades</a></li>
-                    <li><a href="#">People</a></li>
-                    <li><a href="#">Panopto Video</a></li>
-                    <li><a href="#">Discussions</a></li>
-                    <li><a href="#">Announcements</a></li>
-                    <li><a href="#">Pages</a></li>
-                    <li><a href="#">Files</a></li>
-                    <li><a href="#">Rubrics</a></li>
-                    <li><a href="#">Outcomes</a></li>
-                    <li><a href="#">Collaborations</a></li>
-                    <li><a href="#">Syllabus</a></li>
-                    <li><a href="#">Settings</a></li>
-                </ul>
-            </td>
-        </tbody>
-    </table>
+    <div class="flex-row-container">
+        <!---Kanbas Navigation-->
+        <div class="kanbas-nav nav flex-column nav-pills" aria-orientation="vertical">
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <img style="width: 75px; padding: 0px;" src="neu-banner.png" alt="Image"></a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="accountNav.html" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-regular fa-user fa-2x"></i>
+                <div>Account</div></a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="dashboard.html" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-gauge fa-2x"></i>
+                <div>Dashboard</div></a>
+            <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="courseNav.html" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class=" fa fa-book fa-2x"></i>
+                <div>Courses</div></a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-regular fa-calendar-days fa-2x"></i>Calendar</a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-envelope-open-text fa-2x"></i>
+                <div>Inbox</div></a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-regular fa-clock fa-2x"></i>
+                <div>History</div></a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-solid fa-display fa-2x"></i>
+                <div>Studio</div></a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-regular fa-circle-right fa-2x"></i>
+                <div>Studio</div></a>
+            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <i class="fa fa-regular fa-circle-question fa-2x"></i>
+                <div>Help</div></a>
+        </div>
+        <!---Course Navigation-->
+        <div class="main-screen">
+            <h3>Jose Annunziato's Profile</h3>
+            <hr>
+            <div class="course-nav list-group">
+                <a href="home.html" class="list-group-item list-group-item-action">Home</a>
+                <a href="#" class="list-group-item list-group-item-action">Modules</a>
+                <a href="#" class="list-group-item list-group-item-action">Piazza</a>
+                <a href="#" class="list-group-item list-group-item-action">Zoom Meetings</a>
+                <a href="assignments/index.html" class="list-group-item list-group-item-action">Assignments</a>
+                <a href="grades.html" class="list-group-item list-group-item-action">Quizzes</a>
+                <a href="#" class="list-group-item list-group-item-action">Grades</a>
+                <a href="#" class="list-group-item list-group-item-action">People</a>
+                <a href="#" class="list-group-item list-group-item-action">Panopto VideO</a>
+                <a href="#" class="list-group-item list-group-item-action">Discussions</a>
+                <a href="#" class="list-group-item list-group-item-action">Announcements</a>
+                <a href="#" class="list-group-item list-group-item-action">Pages</a>
+                <a href="#" class="list-group-item list-group-item-action">Files</a>
+                <a href="#" class="list-group-item list-group-item-action">Rubrics</a>
+                <a href="#" class="list-group-item list-group-item-action">Outcomes</a>
+                <a href="#" class="list-group-item list-group-item-action">Collaborations</a>
+                <a href="#" class="list-group-item list-group-item-action">Syllabus</a>
+                <a href="#" class="list-group-item list-group-item-action">Progress Reports (EAB NAVIGATE)</a>
+                <a href="#" class="list-group-item list-group-item-action">Settings</a>
+            </div>
+        </div>
+    </div>
+            
+
     
 </body>
 </html>
