--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -9,10 +9,8 @@
     </style> -->
     <link href="index.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    Try using this link ->
-
-<link href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" rel="stylesheet" />
-  <head>
+    <link href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" rel="stylesheet" />
+</head>
 <body>
 <h1>Cascading Style Sheets (CSS)</h1>
 <h2>Style attribute and tag</h2>
