fixed commons icon

--- a/public/kanbas/kanbasNav.html
+++ b/public/kanbas/kanbasNav.html
@@ -36,7 +36,7 @@
             <i class="fa fa-solid fa-display fa-2x"></i>
             <div>Studio</div></a>
         <a class="nav-link " id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
-            <i class="fa-solid fa-right-from-bracket"></i>
+            <i class="fa fa-solid fa-right-from-bracket fa-2x"></i>
             <div>Commons</div></a>
         <a class="nav-link " id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
             <i class="fa fa-regular fa-circle-question fa-2x"></i>
