some finishing touches

--- a/public/kanbas/accountNav.html
+++ b/public/kanbas/accountNav.html
@@ -15,7 +15,7 @@
         <!---Kanbas Navigation-->
         <div class="kanbas-nav nav flex-column nav-pills" aria-orientation="vertical">
             <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
-                <img style="width: 75px; padding: 0px;" src="neu-banner.png" alt="Image"></a>
+                <img src="neu-banner.png" alt="Image"></a>
             <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="accountNav.html" role="tab" aria-controls="v-pills-home" aria-selected="true">
                 <i class="fa fa-regular fa-user fa-2x"></i>
                 <div>Account</div></a>
@@ -37,8 +37,8 @@
                 <i class="fa fa-solid fa-display fa-2x"></i>
                 <div>Studio</div></a>
             <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
-                <i class="fa fa-regular fa-circle-right fa-2x"></i>
-                <div>Studio</div></a>
+                <i class="fa fa-solid fa-right-from-bracket fa-2x"></i>
+                <div>Commons</div></a>
             <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
                 <i class="fa fa-regular fa-circle-question fa-2x"></i>
                 <div>Help</div></a>
