--- a/public/kanbas/courseNav.html
+++ b/public/kanbas/courseNav.html
@@ -15,7 +15,7 @@
         <!---Kanbas Navigation-->
         <div class="kanbas-nav nav flex-column nav-pills" aria-orientation="vertical">
             <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
-                <img style="width: 75px; padding: 0px;" src="neu-banner.png" alt="Image"></a>
+                <img src="neu-banner.png" alt="Image"></a>
             <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="accountNav.html" role="tab" aria-controls="v-pills-home" aria-selected="true">
                 <i class="fa fa-regular fa-user fa-2x"></i>
                 <div>Account</div></a>
@@ -37,26 +37,24 @@
                 <i class="fa fa-solid fa-display fa-2x"></i>
                 <div>Studio</div></a>
             <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
-                <i class="fa fa-regular fa-circle-right fa-2x"></i>
-                <div>Studio</div></a>
+                <i class="fa fa-solid fa-right-from-bracket fa-2x"></i>
+                <div>Commons</div></a>
             <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
                 <i class="fa fa-regular fa-circle-question fa-2x"></i>
                 <div>Help</div></a>
         </div>
         <!---Course Navigation-->
         <div class="main-screen">
-            <h3>Jose Annunziato's Profile</h3>
-            <hr>
             <div class="course-nav list-group">
                 <a href="home.html" class="list-group-item list-group-item-action">Home</a>
                 <a href="#" class="list-group-item list-group-item-action">Modules</a>
                 <a href="#" class="list-group-item list-group-item-action">Piazza</a>
                 <a href="#" class="list-group-item list-group-item-action">Zoom Meetings</a>
                 <a href="assignments/index.html" class="list-group-item list-group-item-action">Assignments</a>
-                <a href="grades.html" class="list-group-item list-group-item-action">Quizzes</a>
-                <a href="#" class="list-group-item list-group-item-action">Grades</a>
+                <a href="#" class="list-group-item list-group-item-action">Quizzes</a>
+                <a href="grades.html" class="list-group-item list-group-item-action">Grades</a>
                 <a href="#" class="list-group-item list-group-item-action">People</a>
-                <a href="#" class="list-group-item list-group-item-action">Panopto VideO</a>
+                <a href="#" class="list-group-item list-group-item-action">Panopto Video</a>
                 <a href="#" class="list-group-item list-group-item-action">Discussions</a>
                 <a href="#" class="list-group-item list-group-item-action">Announcements</a>
                 <a href="#" class="list-group-item list-group-item-action">Pages</a>
