--- a/public/kanbas/kanbasNav.html
+++ b/public/kanbas/kanbasNav.html
@@ -14,7 +14,7 @@
     
     <div class="kanbas-nav nav flex-column nav-pills" aria-orientation="vertical">
         <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
-            <img style="width: 60px; padding: 0px;" src="neu-banner.png" alt="Image"></a>
+            <img src="neu-banner.png" alt="Image"></a>
         <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="accountNav.html" role="tab" aria-controls="v-pills-home" aria-selected="true">
             <i class="fa fa-regular fa-user fa-2x"></i>
             <div>Account</div></a>
