--- a/public/kanbas/profile/index.html
+++ b/public/kanbas/profile/index.html
@@ -15,7 +15,7 @@
         <!---Kanbas Navigation-->
         <div class="kanbas-nav nav flex-column nav-pills" aria-orientation="vertical">
             <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
-                <img style="width: 60px; padding: 0px;" src="../neu-banner.png" alt="Image"></a>
+                <img src="../neu-banner.png" alt="Image"></a>
             <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="../accountNav.html" role="tab" aria-controls="v-pills-home" aria-selected="true">
                 <i class="fa fa-regular fa-user fa-2x"></i>
                 <div>Account</div></a>
@@ -45,7 +45,15 @@
         </div>
         <!---MAIN SCREEN-->
         <div class="main-screen">
-            <h3 class="display-7">Jose Annunziato's Profile</h3>
+            <div class="flex-row-container align-items-center">
+                <div class="me-3">
+                    <i class="fa fa-solid fa-bars"></i>
+                </div>
+                <div class="mb-0 mt-2">
+                    <h3>Jose Annunziato's Profile</h3>
+                </div>
+            </div>
+            
             <hr>
             <!---ACCOUNT NAVIGATION-->
             <div class="flex-row-container "> 
