--- a/public/kanbas/Assignments/index.html
+++ b/public/kanbas/Assignments/index.html
@@ -20,13 +20,13 @@
               </button>
             <div class="collapse navbar-collapse navbar-nav text-left" id="kanbas-nav">
                 <div class="navbar-nav bg-dark">
-                    <a class="nav-item nav-link active" href="home.html">Home</a>
+                    <a class="nav-item nav-link" href="../home.html">Home</a>
                     <a class="nav-link" href="#">Modules</a>
                     <a class="nav-link" href="#">Piazza</a>
                     <a class="nav-link" href="#">Zoom Meetings</a>
-                    <a class="nav-link" href="#">Assignments</a>
+                    <a class="nav-link" href="index.html">Assignments</a>
                     <a class="nav-link" href="#">Quizzes</a>
-                    <a class="nav-link" href="#">Grades</a>
+                    <a class="nav-link" href="../grades.html">Grades</a>
                     <a class="nav-link" href="#">People</a>
                     <a class="nav-link" href="#">Panopto Video</a>
                     <a class="nav-link" href="#">Discussions</a>
@@ -84,7 +84,7 @@
         <!---Kanbas Navigation-->
         <div class="kanbas-nav nav flex-column nav-pills d-none d-md-block" aria-orientation="vertical">
             <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#" role="tab" aria-controls="v-pills-home" aria-selected="true">
-                <img style="width: 60px; padding: 0px;" src="../neu-banner.png" alt="Image"></a>
+                <img src="../neu-banner.png" alt="Image"></a>
             <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="../accountNav.html" role="tab" aria-controls="v-pills-home" aria-selected="true">
                 <i class="fa fa-regular fa-user fa-2x"></i>
                 <div>Account</div></a>
@@ -115,6 +115,9 @@
         <!---MAIN SCREEN-->
         <div class="main-screen flex-col">
             <div class="flex-row-container">
+                <div class="mt-3 me-3">
+                    <i class="fa fa-solid fa-bars"></i>
+                </div>
                 <div class="breadcrumb mt-3 mb-0" style="--bs-breadcrumb-divider: '>';">
                     <span class="breadcrumb-item"><a href="#">CS4550.12631.202410</a></span>
                     <span class="breadcrumb-item active" aria-current="page">Assignments</span>
