--- a/public/kanbas/grades.html
+++ b/public/kanbas/grades.html
@@ -20,13 +20,13 @@
           </button>
         <div class="collapse navbar-collapse navbar-nav text-left" id="kanbas-nav">
             <div class="navbar-nav bg-dark">
-                <a class="nav-item nav-link active" href="home.html">Home</a>
+                <a class="nav-item nav-link" href="home.html">Home</a>
                 <a class="nav-link" href="#">Modules</a>
                 <a class="nav-link" href="#">Piazza</a>
                 <a class="nav-link" href="#">Zoom Meetings</a>
-                <a class="nav-link" href="#">Assignments</a>
+                <a class="nav-link" href="assignments/index.html">Assignments</a>
                 <a class="nav-link" href="#">Quizzes</a>
-                <a class="nav-link" href="#">Grades</a>
+                <a class="nav-link" href="grades.html">Grades</a>
                 <a class="nav-link" href="#">People</a>
                 <a class="nav-link" href="#">Panopto Video</a>
                 <a class="nav-link" href="#">Discussions</a>
@@ -115,6 +115,9 @@
     <!---MAIN SCREEN-->
     <div class="main-screen flex-col">
         <div class="flex-row-container">
+            <div class="mt-3 me-3">
+                <i class="fa fa-solid fa-bars"></i>
+            </div>
             <div class="breadcrumb mt-3 mb-0" style="--bs-breadcrumb-divider: '>'; width: 300px;">
                 <span class="breadcrumb-item"><a href="#">CS4550.12631.202410</a></span>
                 <span class="breadcrumb-item active" aria-current="page">Grades</span>
