more finishing touches

--- a/public/kanbas/Assignments/edit.html
+++ b/public/kanbas/Assignments/edit.html
@@ -309,17 +309,20 @@
                                         <b>Until</b>
                                     </div>
                                 </div>
-                                <div class="flex-row-container mb-3">
+                                <div class="flex-row-container mb-3 me-2">
                                     <div class="col-6 me-2">
                                         <div class="input-group flex-nowrap">
                                             <input type="datetime-local" class="form-control" value="2023-9-18" aria-label="Username" aria-describedby="addon-wrapping">
                                             <span class="input-group-text" id="addon-wrapping"><i class="fa-regular fa-calendar-days"></i></span>
                                         </div>
                                     </div>
-                                    <div class="input-group flex-nowrap">
-                                        <input type="datetime-local" class="form-control" value="2023-9-18" aria-label="Username" aria-describedby="addon-wrapping">
-                                        <span class="input-group-text" id="addon-wrapping"><i class="fa-regular fa-calendar-days"></i></span>
+                                    <div class="col-6">
+                                        <div class="input-group flex-nowrap">
+                                            <input type="datetime-local" class="form-control" value="2023-9-18" aria-label="Username" aria-describedby="addon-wrapping">
+                                            <span class="input-group-text" id="addon-wrapping"><i class="fa-regular fa-calendar-days"></i></span>
+                                        </div>
                                     </div>
+                                    
                                 </div>
                                 <div class="flex-row-container">
                                     <button class="btn col-12"><i class="fa-solid fa-plus"></i>Add</button>
