--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <a href="labs/a1/index.html">A1 Lab</a>
-    <a href="labs/a2/index.html">A2 Lab</a>
+    <div><a href="labs/a1/index.html">A1 Lab</a></div>
+    <div><a href="labs/a2/index.html">A2 Lab</a></div>
     <div><a href="kanbas/kanbasNav.html">Kanbas</a></div>
     
     <!--
