adding script reference and icon to account nav

--- a/public/kanbas/accountNav.html
+++ b/public/kanbas/accountNav.html
@@ -45,7 +45,14 @@
         </div>
         <!---account Navigation-->
         <div class="main-screen">
-            <h3>Jose Annunziato's Profile</h3>
+            <div class="flex-row-container align-items-center">
+                <div class="me-3">
+                    <i class="fa fa-solid fa-bars"></i>
+                </div>
+                <div class="mb-0 mt-2">
+                    <h3>Jose Annunziato's Profile</h3>
+                </div>
+            </div>
             <hr>
             <div class="account-nav list-group">
                 <a href="#" class="list-group-item list-group-item-action">Notification</a>
