--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div><a href="labs/a1/index.html">A1 Lab</a></div>
+    <!-- <div><a href="labs/a1/index.html">A1 Lab</a></div>
     <div><a href="labs/a2/index.html">A2 Lab</a></div>
-    <div><a href="kanbas/kanbasNav.html">Kanbas</a></div>
-    
+    <div><a href="kanbas/kanbasNav.html">Kanbas</a></div> -->
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
